--- a/index.html
+++ b/index.html
@@ -35,6 +35,18 @@
             <img width="479" src="https://picsum.photos/479/479?index=2" alt="">
         </div>        
     </section>
+    <section class="main_content ">
+        <div class="card from_left reveal">
+            <img width="479" src="https://picsum.photos/479/479?index=3" alt="">
+        </div>        
+        <div class="text__wrapper">
+            <div class="text reveal">
+                <h1>Поехали обратно (вверх)</h1>
+                Какой-то текст, какой не важно абсолютно, ведь тут дело в другом. 
+                Дело в скроллтригере и прочей штуке
+            </div>
+        </div>
+    </section>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/ScrollTrigger.min.js"></script>
     <script src="script/main.dev.js"></script>
